<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Strings XML filter tool</string>

    <string name="defaultContentDescription" translatable="false">defaultContentDescription</string>
    <string name="notImplemented">Function still not implemented</string>

    <!--    Permissions-->
    <string name="permissionGranted">Permissions Granted</string>
    <string name="permissionNotGranted">Permissions Not Granted</string>
    <string name="noIntentFound">No suitable File Manager was found</string>
    <string name="fileOpen">Select file location of strings.xml</string>
    <string name="fileSave">Select folder to save your new strings.xml</string>

    <!--    AdsView-->
<!--    <string name="ads_banner" translatable="false">ca-app-pub-3940256099942544/6300978111</string>-->
<!--    <string name="ads_banner" translatable="false">ca-app-pub-2321980263900338/1932074368</string>-->
    <string name="ads_banner" translatable="false">ca-app-pub-2321980263900338/5572228365</string>
<!--    <string name="ads_interstitial" translatable="false">ca-app-pub-3940256099942544/1033173712</string>-->
    <string name="ads_interstitial" translatable="false">ca-app-pub-2321980263900338/6925380744</string>

    <!--    clipboard-->
    <string name="noPlainText">There is no a plain text on your clipboard</string>
    <string name="textCopied">Text copied into your clipboard</string>
    <string name="processDone">Process done</string>
    <string name="stringxmlFormatWrong">strings.xml format wrong</string>
    <string name="stringxmlTranslatedFormatWrong">translated strings.xml format wrong</string>
    <string name="stringxmlFormatEmpty">strings.xml format is empty please fill it</string>

    <!--    button-->
    <string name="buttonBack_text">Back</string>
    <string name="buttonNext_text">Next</string>
    <string name="buttonRestart_text">Restart</string>
    <string name="buttonOpenFile_text">Open File</string>
    <string name="buttonSaveFile_text">Save File</string>
    <string name="button1_text">Paste</string>
    <string name="button2_text">Copy</string>
    <string name="button3_text">Paste</string>
    <string name="button4_text">Copy</string>
    <string name="buttonAutoTranslate_text">Auto Translate with Google</string>

    <!--    editTextTextMultiLine-->
    <string name="editTextTextMultiLine1_hint">Insert raw strings.xml</string>
    <string name="editTextTextMultiLine2_hint">Take your filtered strings.xml</string>
    <string name="editTextTextMultiLine3_hint">Paste your translated strings.xml</string>
    <string name="editTextTextMultiLine4_hint">Take your strings.xml structured with the translation provided</string>
    <string name="editTextTextMultiLine_google_hint">Select your language.\nFunctionality still not activated.\nWill be available at version 2.</string>

    <!--    Menú items-->
    <string name="item_policy">Privacy Policy</string>
    <string name="item_rate">Rate our app</string>
    <string name="item_about">About</string>

    <!--    Author-->
    <string name="author_name_1" translatable="false">Julio César Alberto</string>
    <string name="author_name_2" translatable="false">León Anhuamán</string>
    <string name="author_profession" translatable="false">Android Developer - UI/UX Designer</string>
    <string name="author_email" translatable="false">masterjulioleon2004@gmail.com</string>
    <string name="author_phone" translatable="false">+58 (424) 225.92.20</string>

    <!--    Version 2 UI-->
    <!--    Tools-->
    <string name="tvA1">Open</string>
    <string name="tvB1">Paste</string>
    <string name="tvC1">Next</string>

    <string name="tvA2">Back</string>
    <string name="tvB2">Copy</string>

    <string name="tvB3">Translate</string>

    <string name="tvC5">Save</string>
    <string name="tvD5">Restart</string>

    <!--    Components-->
    <string name="tvM1">Raw\nStrings</string>
    <string name="tvM2">Filtered\nStrings</string>
    <string name="tvM3">Translate\nStrings</string>
    <string name="tvM4">Translated\nStrings</string>
    <string name="tvM5">New Raw\nStrings</string>

    <!--    Contributors-->
    <string name="contributors_special">Special Thanks for you feedback:</string>
    <string name="contributors_contributors">Telmo Almeida</string>


</resources>
