<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSource3Up">

    <View
        android:id="@+id/view1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="204dp"
        android:background="@color/colorSourceBase"
        app:layout_constraintBottom_toTopOf="@id/adView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="224dp"
        android:background="@drawable/edittexttextmultiline_background"
        app:layout_constraintBottom_toTopOf="@id/adView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="234dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/editTextTextMultiLine1_hint"
        android:inputType="textMultiLine"
        android:padding="@dimen/editTextTextMultiLine_padding"
        android:textColorHint="@color/colorSource4Up"
        android:textSize="@dimen/editTextTextMultiLine_textSize"
        app:layout_constraintBottom_toTopOf="@id/adView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tool1"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="114dp"
        android:background="@color/colorSourceBase"
        app:layout_constraintBottom_toTopOf="@id/adView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/ivA1"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/edittexttextmultiline_background" />

        <TextView
            android:id="@+id/tvA1"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:text="@string/tvA1"
            android:textColor="@color/colorBlack"
            android:textSize="24sp"
            android:typeface="sans"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivA1" />

        <ImageView
            android:id="@+id/ivB1"
            android:layout_width="80dp"
            android:layout_height="60dp"
            app:layout_constraintEnd_toStartOf="@+id/ivC1"
            app:layout_constraintStart_toEndOf="@+id/ivA1"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/edittexttextmultiline_background" />

        <TextView
            android:id="@+id/tvB1"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/tvA2"
            android:textColor="@color/colorBlack"
            android:textSize="24sp"
            android:typeface="sans"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvC1"
            app:layout_constraintStart_toEndOf="@+id/tvA1"
            app:layout_constraintTop_toBottomOf="@+id/ivB1" />

        <ImageView
            android:id="@+id/ivC1"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/edittexttextmultiline_background" />

        <TextView
            android:id="@+id/tvC1"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:text="@string/tvA3"
            android:textColor="@color/colorBlack"
            android:textSize="24sp"
            android:typeface="sans"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivC1" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/view13"
        android:layout_width="0dp"
        android:layout_height="10dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="104dp"
        android:background="@color/colorSourceBase"
        app:layout_constraintBottom_toTopOf="@id/adView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/components1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:background="@color/colorSourceBase"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/adView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:id="@+id/view4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="84" />

        <View
            android:id="@+id/view10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="84" />

        <View
            android:id="@+id/view11"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="84" />

        <View
            android:id="@+id/view12"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="84" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/author"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorBackground_author"
        android:clickable="true"
        android:focusable="true"
        android:onClick="author_selected"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/adView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/author_margin"
            android:background="@drawable/edittexttextmultiline_background"
            android:orientation="horizontal"
            android:padding="@dimen/author_padding"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/author_image_size"
                android:layout_height="@dimen/author_image_size"
                android:layout_marginEnd="@dimen/author_image_margin"
                android:layout_weight="1"
                android:contentDescription="@string/defaultContentDescription"
                app:srcCompat="@drawable/cara_marca_personal_2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/author_image_size"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name1"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/author_text_heigth_1"
                    android:gravity="center"
                    android:shadowColor="@color/colorBlack"
                    android:shadowRadius="@dimen/author_text_shadow_radius"
                    android:text="@string/author_name_1"
                    android:textColor="@color/colorWhite"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/name2"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/author_text_heigth_1"
                    android:gravity="center"
                    android:shadowColor="@color/colorBlack"
                    android:shadowRadius="@dimen/author_text_shadow_radius"
                    android:text="@string/author_name_2"
                    android:textColor="@color/colorWhite"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/profession"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/author_text_heigth_2"
                    android:gravity="center"
                    android:shadowColor="@color/colorBlack"
                    android:shadowRadius="@dimen/author_text_shadow_radius"
                    android:text="@string/author_profession"
                    android:textColor="@color/colorWhite"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/author_text_heigth_2"
                    android:gravity="center"
                    android:shadowColor="@color/colorBlack"
                    android:shadowRadius="@dimen/author_text_shadow_radius"
                    android:text="@string/author_email"
                    android:textColor="@color/colorWhite"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/author_text_heigth_2"
                    android:gravity="center"
                    android:shadowColor="@color/colorBlack"
                    android:shadowRadius="@dimen/author_text_shadow_radius"
                    android:text="@string/author_phone"
                    android:textColor="@color/colorWhite"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:adSize="BANNER"
        app:adUnitId="@string/ads_footer"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>